Get affiliation from artist/company
