# api/swagger.yaml
@@ -309,6 +309,61 @@ paths:
         404:
           description: "Performer not found"
       x-swagger-router-controller: "Performer"
+  /performers/bycompany/{companyID}:
+    get:
+      tags:
+      - "performer"
+      summary: "Find performers by Company"
+      description: "Returns performers"
+      operationId: "getPerformerByCompany"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "companyID"
+        in: "path"
+        description: "ID of company"
+        required: true
+        type: "integer"
+        format: "int64"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            type: "array"
+            items: {}
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Performer not found"
+      x-swagger-router-controller: "Performer"
+  /performers/byartist/{artistID}:
+    get:
+      tags:
+      - "performer"
+      summary: "Find Companies by artist"
+      description: "Returns companies"
+      operationId: "getPerformerByArtist"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "artistID"
+        in: "path"
+        description: "ID of artist"
+        required: true
+        type: "integer"
+        format: "int64"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            type: "array"
+            items: {}
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Performer not found"
+      x-swagger-router-controller: "Performer"
+
   /user/{username}:
     get:
       tags:
